[package]
name = "guff-ida"
version = "0.1.3"
edition = "2018"
description = "Information Dispersal Algorithm"
homepage = "https://github.com/declanmalone/guff-ida"
categories = ["mathematics"]
keywords = ["IDA", "Galois", "secret-sharing", "maths", "erasure"]
license = "GPL-2.0-or-later OR LGPL-2.0-or-later"
authors = ["Declan Malone <idablack@users.sourceforge.net>"]

# Use criterion for benchmarking all sorts of things
[dev-dependencies]
criterion = "0.3"

# use guff-matrix as a dev dependency only; this
# crate won't provide any actual matrix code so
# guff-matrix lets us write unit tests on actual
# matrices.
"guff-matrix"        = { path="../guff-matrix",        version = "~0.1" }


[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"guff"        = { path="../guff",        version = "~0.1" }
# "num" = "0.4.0"
"num-traits" = "0.2.14"

